# griffin-hs

./: CHANGELOG.md  griffin-hs.cabal
src/Griffin/: Client.hs
src/Griffin/Api/: V0.hs
test/: Main.hs
test/Griffin/: ApiTest.hs
